--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
                 </div>
             </div>
     </section>
-    <section class="footer-part">
+    <div class="footer-part">
         <div class="chat-section">
-            <h1> <span style="color:white"><b class="bold">WORK INQUIRY</b></span></h1>
+            <h1> <span style="color:white"> Work Inquiry</span></h1>
             <div class="btn">
                 <a class="Button" href="">Let’s Chat</a>
             </div>
         </div>
-    </section>
-    <section>
+    </div>
+    <div>
         <div class="stay-connected">
             <h2 class="stay">Stay connected</h2>
-            <h1 class="mail">ndeveloper315@gmail.com</h1>
+            <h2 class="mail">ndeveloper315@gmail.com</h2>
             <img src="image/image 6.png" alt="">
             <img src="image/Group 33059.png" alt="">
             <img src="image/image 7.png" alt="">
         </div>
-    </section>
+    </div>
 </body>
 </html>
